# airQualityDashboard

./: .env.example  .gitignore  404.html  Dockerfile  README.md  config.yaml  docker-compose.yml  index.html  index.txt  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.app.json  vite.config.ts
_next/static/PEuyJ2v-YKNBlhN_yvQj7/: _buildManifest.js
_next/static/chunks/: 495-3342cd2b21a8d3c0.js  79-7042016b57a59339.js  framework-bfde8efb417f3b3e.js  main-app-b9bf24ee6544b12e.js  webpack-7b1d1ad3688dae40.js
_next/static/chunks/app/: layout-a11e1d04328cc12d.js  page-84533bed8fbce062.js
_next/static/css/: dfdf4cd18b3e5c1a.css
app/: config.py  database.py  main.py  models.py
app/api/: deps.py  health.py  indoor.py  outdoor.py
app/core/: config.py  time.py
app/db/: models.py  session.py
app/polling/: clients.py  service.py
app/schemas/: common.py  forecast.py  indoor.py  outdoor.py
app/services/: forecast_transform.py  mappers.py  repository.py
src/: App.tsx  index.css  main.tsx
src/app/: layout.tsx  page.tsx
tests/: conftest.py  test_api.py  test_forecast_service.py  test_mappers.py  test_polling_service.py  test_time.py
