[project]
name = "air_pollution_monitor"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.33.0",
    "sqlalchemy==2.0.38",
    "psycopg[binary]==3.2.4",
    "pydantic==2.10.6",
    "pydantic-settings==2.6.1",
    "httpx==0.28.1"
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-httpx==0.30.0"
]